--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
         </div>
         <div class="hint-row">
             <span><kbd>G</kbd> Low Graphics</span>
+            <span><kbd>E</kbd> Environment</span>
+        </div>
+        <div class="hint-row">
             <span><kbd>R</kbd> Reset</span>
+            <span><kbd>H</kbd> Hide UI</span>
         </div>
         <div class="hint-row">
             <span><kbd>[</kbd> / <kbd>]</kbd> Speed</span>
-            <span><kbd>H</kbd> Hide UI</span>
         </div>
     </div>
 
@@ -74,6 +77,7 @@
             </div>
             <div class="button-group">
                 <button id="low-graphics-btn" title="Toggle low-graphics mode for better performance">Low Graphics: Off</button>
+                <button id="environment-mode-btn" title="Switch between chaotic and classic environment">Chaotic Zones</button>
             </div>
             <div class="slider-group">
                 <label for="speed-slider">Speed: <span id="speed-value">1x</span></label>
